# Bayesian-Inference

./: .gitignore  CRP_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
data/ciphers/: mono-cipher-5.json  z408.json
data/wordlists/: en_10k.txt
models/: ngram_model_n3_chunks100264_20251111_121703.pkl  ngram_model_n3_chunks101956_20251118_115213.pkl  ngram_model_n3_chunks117272_20251111_122726.pkl
src/: main.py
src/cryptanalysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lm_models/: crp_cache.py  crp_channel_model.py  crp_joint_model.py  crp_source_model.py  dictionary_model.py  incremental_scorer.py  interpolated_model.py  n_gram_model.py
src/search/: bayesian_sampler.py  crp_bayesian_sampler.py
src/text_fetching/: fetcher.py
src/utils/: constants.py  files.py  formatting.py  load_cipher.py
tests/src/: test_integration.py
tests/src/lm_models/: test_crp_models.py  test_incremental_scorer.py
tests/src/search/: test_bayesian_sampler.py  test_crp_sampler.py
